# caffe

./: Makefile  README.md  get_cirrus.sh
examples/: CMakeLists.txt  run.sh
examples/cpp_classification/: Serializers.h  classification.cpp
examples/cpp_classification_loader/: classification_loader.cpp
examples/cpp_classification_preprocessing/: classification_preprocessing.cpp
examples/imagenet/: create_imagenet.sh
tools/: CMakeLists.txt  StringSerializers.h  convert_imageset.cpp
